project(examples)
cmake_minimum_required(VERSION 2.8)
if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
	message(FATAL_ERROR "in source build is not allowed.")
endif()

add_executable(hwserver hwserver.c)
target_link_libraries(hwserver zmq)
add_executable(hwclient hwclient.c)
target_link_libraries(hwclient zmq)
